@@ -3,11 +3,13 @@ DIST calculate-client-2.1.4.tar.bz2 59072 RMD160 fa3dc313569474fc1beecd0116b34ad
 DIST calculate-client-2.1.6.tar.bz2 62209 RMD160 7368fba4ea4a79af7c2123b0cadcea57759d988d SHA1 7acf5bbec387469cb07dcc151cfc75eb35fda0e3 SHA256 dcda6954ace2c8ac85fefea7f63f731aab3757070daf78cde8fa6c8ca1bf4322
 DIST calculate-client-2.1.7.tar.bz2 63073 RMD160 ccc6039fcea31704ba061c16acb57b4bfb378a2e SHA1 20b7aa2e4586d06bae6ab296a6cdd105ae719027 SHA256 996b2c6329945d6b41ab2760fc39ad6f125b051ddfda166b07f1b71db958ea97
 DIST calculate-client-2.1.8.tar.bz2 116827 RMD160 9572a7cbe37f0522094431ffbf4b72c366eea0f7 SHA1 0a07864e31ae26b37ffa923728c745224b2b1be8 SHA256 49a0f382907e315670f117a90919137dc04515be0f86fb56a242ef80e6194424
+DIST calculate-client-2.1.9.tar.bz2 117593 RMD160 dd95e522a835596570fe0f7870e0920d83719415 SHA1 d745d907ac1976db3fd215f161ccbcd781874d12 SHA256 276762e62d20d421b967f8bd00d9a61a12553a7caa7a852486f4341aa341ecf4
 EBUILD calculate-client-2.1.4-r1.ebuild 1607 RMD160 1805a60fe43dc433a617a9d6b959389f18ca848b SHA1 abbbff04c6cf6b19cefa2969d09d26fbfea35353 SHA256 75939e766823bb2ddd34a77af6ab86dc0ffb0693eef8dbfbda886cb20eebd834
 EBUILD calculate-client-2.1.6.ebuild 1609 RMD160 f5ce7dce6b2e7e1a8bf00ef1a3f99005a5fad653 SHA1 dcbd6bf33f8597162f10042209369a7579242279 SHA256 af44e5162071e59babc99f6ab1bc5b0bb285c95b208eca96b4a6422478112d04
 EBUILD calculate-client-2.1.7-r1.ebuild 1772 RMD160 a3e9c9e7dffa4bf2d166f52f21b8be68967d6e8f SHA1 526870eaf6b800fb9f58f22a41bbaaa027131147 SHA256 46a1aa976a8fe10f351191a866d50419282157f25aff82a5cf4c34e41729aea0
 EBUILD calculate-client-2.1.7.ebuild 1609 RMD160 f5ce7dce6b2e7e1a8bf00ef1a3f99005a5fad653 SHA1 dcbd6bf33f8597162f10042209369a7579242279 SHA256 af44e5162071e59babc99f6ab1bc5b0bb285c95b208eca96b4a6422478112d04
 EBUILD calculate-client-2.1.8.ebuild 1606 RMD160 29e6db9602853fd07410bb438c36383fc8530e5b SHA1 6a080a7b0c224c8a2c73749b38cfd81733a324da SHA256 445343909ef13079b04b6923b451f20643bd00f65be722a52fde91ccedb687d9
+EBUILD calculate-client-2.1.9.ebuild 1606 RMD160 29e6db9602853fd07410bb438c36383fc8530e5b SHA1 6a080a7b0c224c8a2c73749b38cfd81733a324da SHA256 445343909ef13079b04b6923b451f20643bd00f65be722a52fde91ccedb687d9
 EBUILD calculate-client-9999.ebuild 1449 RMD160 7b6d29aaac84dd9dfd23dfd75ac14a1bafce069d SHA1 178ffc042651f32d11ea6ffcf7f2df604c372155 SHA256 a79b83f297b19071b794bfb67d96bd52593bc6397cb8b9a2a3d412f234db1286
-MISC ChangeLog 428 RMD160 fa2e1f30d1347827d9774ad103867e8d054885c1 SHA1 afe5a5060436f8bddb79a8b6b5025655111587f3 SHA256 e5a4cf49139cec050181d0832faa971cceab7b47c82178f295f2f18fb978357f
+MISC ChangeLog 577 RMD160 37a93de3d78dc1f3360e2e2cb208600124275450 SHA1 06d1c23647deafc5177522c9d2536ab011fd3e6f SHA256 12132add2da7d998cf49836c794a496bad7fefc12959d6aaed3f34195e093033
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
