@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-client-2.1.9 (02 Dec 2009)
+
+  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
+  +calculate-client-2.1.9.ebuild:
+  Bump version.
+
 *calculate-client-2.1.8 (01 Dec 2009)
 
   01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
